--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/DSC_0619.jpg" alt="" />
+									<img src="images/DSC_0619.JPG" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
