--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>phileasthefogg.github.io</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -69,7 +69,7 @@
 										<li class="icon solid fa-sitemap">Back-End Development using Node.js</li>
 										<li class="icon solid fa-terminal">Command line and scripting</li>
 										<li class="icon solid fa-shield-alt">Privacy and Security</li>
-										<li class="icon solid fa-code-branch">Version Management</li>
+										<li class="icon solid fa-code-branch">Git Version Management</li>
 										<li class="icon solid fa-mobile-alt">Mobile Development with React-Native</li>
 									</ul>
 								</div>
