updated some skills and icons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
-						<li><a href="#two">Expertise</a></li>
+						<li><a href="#two">Skills at a Glance</a></li>
 						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
@@ -62,15 +62,15 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Expertise</h3>
+									<h3>Skills at a Glance</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Front-End Development with React</li>
-										<li class="icon solid fa-sitemap">Back-End Development using Node.js</li>
-										<li class="icon solid fa-terminal">Command line and scripting</li>
-										<li class="icon solid fa-shield-alt">Privacy and Security</li>
-										<li class="icon solid fa-code-branch">Git Version Management</li>
-										<li class="icon solid fa-mobile-alt">Mobile Development with React-Native</li>
+										<li class="icon solid fa-sitemap">RESTful API Design</li>
+										<li class="icon solid fa-server">Back-End Development using Node.js</li>
+										<li class="icon solid fa-database">Schema Design and Object Modelling</li>
+										<li class="icon solid fa-mobile-alt">React-Native Mobile Development</li>
+										<li class="icon solid fa-chalkboard-teacher">Technical Mentorship</li>
 									</ul>
 								</div>
 							</section>
