--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/profile.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/profile.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Harrison Lau</a></h1>
 					<p>Full-Stack Software Engineer</p>
 				</header>
