added form functionality

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<h2>Hello World.</h2>
 										<p>Let's make something cool</p>
 									</header>
-									<p>Software engineer with extensive experience learning new things quickly.  React developer, architect of RESTful APIs, database schema designer, and search engine optimization specialist.  Advocate of human-readable code and user-centered design.  Skilled Javascript developer whose technical acumen and passion for teaching has helped hundreds of talented coders learn the fundamentals of modern web development.</p>
+									<p>Software engineer with extensive experience learning new things quickly.  <!--React developer, architect of RESTful APIs, database schema designer, and search engine optimization specialist.-->  Advocate of human-readable code and user-centered design.  Skilled Javascript developer whose technical acumen and passion for teaching has helped hundreds of talented coders learn the fundamentals of modern web development.</p>
 								</div>
 							</section>
 
@@ -63,12 +63,12 @@
 							<section id="two">
 								<div class="container">
 									<h3>Skills at a Glance</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Some of the ways I can help out.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Front-End Development with React</li>
+										<li class="icon solid fa-code">Front-End Development with React.js</li>
 										<li class="icon solid fa-sitemap">RESTful API Design</li>
 										<li class="icon solid fa-server">Back-End Development using Node.js</li>
-										<li class="icon solid fa-database">Schema Design and Object Modelling</li>
+										<li class="icon solid fa-database">Database Schema and Object Modelling</li>
 										<li class="icon solid fa-mobile-alt">React-Native Mobile Development</li>
 										<li class="icon solid fa-chalkboard-teacher">Technical Mentorship</li>
 									</ul>
@@ -79,7 +79,8 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
+									<p>Here are a few of my favorite projects from the past year.  I'm building things all the time so be sure to check back periodically to see all my most recent work.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -111,8 +112,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
+									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
+									<form method="post" action="https://formspree.io/f/xrgoaprq">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
