--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
 									<p>Here are a few of my favorite projects from the past year.  I'm building things all the time so be sure to check back periodically to see all my most recent work.</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/pic00.png" alt="" /></a>
+											<div class="inner">
+												<h4>friendTrips [WIP]</h4>
+												<p>A web application designed to make planning trips with friends easier.  Highlights include: a websocket-based chat client allowing users to plan their trips in real-time.  Integration with external Travel APIs, allowing users to search for and book hotels and flights.  A drag-and-drop itinerary builder, where users can build out their personal itineraries, and share them with the group.
+												</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Style Selector</h4>
