added links in navbar icons

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="Harrison Lau's Resume.pdf" target="_blank" class="icon solid fas fa-align-justify"><span class="label"></span></a></li>
+						<li><a href="https://www.linkedin.com/in/harrison-lau/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/phileasthefogg" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:thehlau@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -83,7 +82,7 @@
 									<p>Here are a few of my favorite projects from the past year.  I'm building things all the time so be sure to check back periodically to see all my most recent work.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic00.png" alt="" /></a>
+											<a href="https://github.com/friend-trips/friendtrips" class="image"><img src="images/pic00.png" alt="" /></a>
 											<div class="inner">
 												<h4>friendTrips [WIP]</h4>
 												<p>A web application designed to make planning trips with friends easier.  Highlights include: a websocket-based chat client allowing users to plan their trips in real-time.  Integration with external Travel APIs, allowing users to search for and book hotels and flights.  A drag-and-drop itinerary builder, where users can build out their personal itineraries, and share them with the group.
@@ -91,7 +90,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/Group-Four-Loop/Harrison_Nordstrom_Looks" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Style Selector</h4>
 												<p>An outfit selection microservice designed for an e-commerce platform.  Highlights include: custom-built image carousels which allow users to view a number of different products of the same type, a product details panel which displays information relevant to specific user-selected products, a RESTful API and PostgreSQL database to support the back-end, Docker-ized and hosted on AWS.
@@ -99,14 +98,14 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/4GB-Left/sdc-harrison-product" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>ShoeEmporium</h4>
 												<p>Working with legacy code, redesigned back-end architecture to better serve requests from a database under heavy load.  Highlights include: benchmarking two databases (SQL and NoSQL) in order to assess best fit for our use-case, migrating 50 million primary records onto CassandraDB, stress testing deployed app servers and database on AWS EC2 instances using Loader.io and New Relic, horizontal scaling of application server layer, and finally implementing cacheing and load-balancing using Nginx.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://github.com/phileasthefogg/MoneyClip" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>MoneyClip</h4>
 												<p>A mobile application and personal finance tool designed to help users track their expenditures throughout the week.  Some highlights include: cross-platform (iOS and Android) support with React-Native and Expo, integration with Firebase Realtime Database and Authentication for added security, responsive charts and dashboards.</p>
