--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
 									<p>Here are a few of my favorite projects from the past year.  I'm building things all the time so be sure to check back periodically to see all my most recent work.</p>
 									<div class="features">
 										<article>
+											<a href="https://github.com/phileasthefogg/theDuckPond" class="image"><img src="images/duckPondDemo.gif" alt="" /></a>
+											<div class="inner">
+												<h4>theDuckPond [WIP]</h4>
+												<p>A real-time chat application built with Firebase.  Highlights include: a websocket-based chat client allowing users to chat real-time.  Firebase Realtime Database and Cloud Storage supported by Google Cloud Functions.  Authenticated logins with public and private (invite only) chat rooms.  Add Friends and see their online status change as they log on and off the app.
+												</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://github.com/friend-trips/friendtrips" class="image"><img src="images/pic00.png" alt="" /></a>
 											<div class="inner">
 												<h4>friendTrips [WIP]</h4>
