--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 											<a href="https://github.com/phileasthefogg/theDuckPond" class="image"><img src="images/duckPondDemo.gif" alt="" /></a>
 											<div class="inner">
 												<h4>theDuckPond [WIP]</h4>
-												<p>A real-time chat application built with Firebase.  Highlights include: a websocket-based chat client allowing users to chat real-time.  Firebase Realtime Database and Cloud Storage supported by Google Cloud Functions.  Authenticated logins with public and private (invite only) chat rooms.  Add Friends and see their online status change as they log on and off the app.
+												<p>A real-time chat application built with Firebase and React-Bootstrap.  Highlights include: a websocket-based chat client allowing users to chat real-time.  Firebase Realtime Database and Cloud Storage supported by Google Cloud Functions.  Authenticated logins with public and private (invite only) chat rooms.  Add Friends and see their online status change as they log on and off the app.
 												</p>
 											</div>
 										</article>
