--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 											<a href="https://github.com/phileasthefogg/theDuckPond" class="image"><img src="images/duckPondDemo.gif" alt="" /></a>
 											<div class="inner">
 												<h4>theDuckPond [WIP]</h4>
-												<p>A real-time chat application built with Firebase and React-Bootstrap.  Highlights include: a websocket-based chat client allowing users to chat real-time.  Firebase Realtime Database and Cloud Storage supported by Google Cloud Functions.  Authenticated logins with public and private (invite only) chat rooms.  Add Friends and see their online status change as they log on and off the app.
+												<p>A chat application built with Firebase and React-Bootstrap.  Highlights include: a websocket chat client allowing users to message friends in real-time.  Firebase Realtime Database and Cloud Storage supported by Google Cloud Functions.  Authenticated logins with public and private (invite only) chat rooms.  Add Friends and see their online status change as they log on and off the app.  Share images and media with friends.
 												</p>
 											</div>
 										</article>
@@ -93,7 +93,7 @@
 											<a href="https://github.com/friend-trips/friendtrips" class="image"><img src="images/pic00.png" alt="" /></a>
 											<div class="inner">
 												<h4>friendTrips [WIP]</h4>
-												<p>A web application designed to make planning trips with friends easier.  Highlights include: a websocket-based chat client allowing users to plan their trips in real-time.  Integration with external Travel APIs, allowing users to search for and book hotels and flights.  A drag-and-drop itinerary builder, where users can build out their personal itineraries, and share them with the group.
+												<p>A web application designed to make planning trips with friends easier.  Highlights include: a websocket-based chat client allowing users to plan their trips in real-time.  Integration with external Travel APIs, allowing users to search for and book hotels and flights.  Points of interest search built with MapboxGL.  A drag-and-drop itinerary builder, where users can build out their personal itineraries, and share them to the group's trip calendar.
 												</p>
 											</div>
 										</article>
