--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<h2>Hello World.</h2>
 										<p>Let's make something cool</p>
 									</header>
-									<p>Software engineer with extensive experience learning new things quickly.  <!--React developer, architect of RESTful APIs, database schema designer, and search engine optimization specialist.-->  Advocate of human-readable code and user-centered design.  Skilled Javascript developer whose technical acumen and passion for teaching has helped hundreds of talented coders learn the fundamentals of modern web development.</p>
+									<p>Fullstack software engineer with a passion for exploration, discovery, and knowledge sharing.  Mission-driven developer building powerful and scalable solutions aimed at improving the lives of everyday people.  Extensive experience designing and building full stack web and mobile applications using modern development technologies such as React and React-Native, Express, Node.js, AWS, and Google Cloud Platform.  Experience working cross-functionally with Product and Design teams.  Advocate of the code review.  Skilled Javascript/Typescript developer whose technical acumen and passion for teaching has helped hundreds of talented coders master the fundamentals of modern web development.</p>
 								</div>
 							</section>
 
