--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="Harrison Lau's Resume.pdf" target="_blank" class="icon solid fas fa-align-justify"><span class="label"></span></a></li>
 						<li><a href="https://www.linkedin.com/in/harrison-lau/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/phileasthefogg" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:thehlau@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
+					<a href="Harrison Lau's Resume.pdf" target="_blank" class="label" name="Resume">Resume</a>
 				</footer>
 			</section>
 
