--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About Me</a></li>
-						<li><a href="#two">Skills at a Glance</a></li>
-						<li><a href="#three">Projects</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#aboutme" class="active">About Me</a></li>
+						<li><a href="#skills">Skills at a Glance</a></li>
+						<li><a href="#projects">Projects</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -49,7 +49,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="aboutme">
 								<div class="image main" data-position="center">
 									<img src="images/DSC_0619.JPG" alt="" />
 								</div>
@@ -62,8 +62,8 @@
 								</div>
 							</section>
 
-						<!-- Two -->
-							<section id="two">
+						<!-- skills -->
+							<section id="skills">
 								<div class="container">
 									<h3>Skills at a Glance</h3>
 									<p>Some of the ways I can help out.</p>
@@ -78,8 +78,8 @@
 								</div>
 							</section>
 
-						<!-- Three -->
-							<section id="three">
+						<!-- projects -->
+							<section id="projects">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
@@ -128,7 +128,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="contact">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
