--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 									<p>Here are a few of my favorite projects from the past year.  I'm building things all the time so be sure to check back periodically to see all my most recent work.</p>
 									<div class="features">
 										<article>
+												<a href="https://github.com/phileasthefogg/storyMap" class="image"><img src="https://i.gyazo.com/4d3b1608c76460596521b1270acef259.gif" alt="Image from Gyazo" width="470"/></a>
+											<div class="inner">
+												<h4>StoryMap [WIP]</h4>
+												<p>A mobile application built with React-Native designed to help celebrate the people and history of San Francisco's Chinatown.  Highlights include:  Cross-platform compatibility using React-Native and Expo.  Firebase Firestore and Cloud Storage supported by Google Cloud Functions.
+												</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://github.com/phileasthefogg/theDuckPond" class="image"><img src="images/duckPondDemo.gif" alt="" /></a>
 											<div class="inner">
 												<h4>theDuckPond [WIP]</h4>
@@ -96,7 +104,7 @@
 										<article>
 											<a href="https://github.com/friend-trips/friendtrips" class="image"><img src="images/pic00.png" alt="" /></a>
 											<div class="inner">
-												<h4>friendTrips [WIP]</h4>
+												<h4>friendTrips</h4>
 												<p>A web application designed to make planning trips with friends easier.  Highlights include: a websocket-based chat client allowing users to plan their trips in real-time.  Integration with external Travel APIs, allowing users to search for and book hotels and flights.  Points of interest search built with MapboxGL.  A drag-and-drop itinerary builder, where users can build out their personal itineraries, and share them to the group's trip calendar.
 												</p>
 											</div>
